# auto-ds-agents

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ag_context.py  best_clustering_model.joblib  best_clustering_model.pkl  best_kmeans_model.pkl  conversation.txt  crewai_docs.txt  main.py  main_1.py  main_flask.py  out.txt  output.txt  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_app_threaded.py  tasks.yaml  test.ipynb  test.py  test_agent_tools.py  test_agents.py  test_docker.py  test_main.py  test_workflow.py  train_data_with_clusters.csv  train_with_clusters.csv  workflowmanager.py
.cache/1/: cache.db
agent_code/: house_price_prediction.py
agents/: __init__.py  base_agent.py  business_translator.py  data_analyst.py  ml_engineer.py  project_manager.py  workflow.py
artifacts/: best_model_regression.joblib  data_engineer_handoff_notes.txt  data_exploration_summary.txt  house_prices_cleaned.csv  missing_values.csv  model_metrics.json  model_summary.json
configs/: llm_config.json
core/: __init__.py  memory.py  state.py
crew/: crew_tools.py
crew/agents/: crew_agents.py
crew/agents/config/: agents.yaml  tasks.yaml
data/: df_cleaned.csv  df_clustered.csv  predict_input.csv  test_cleaned.csv  test_final.csv  train_cleaned.csv  train_final.csv  val_cleaned.csv  val_final.csv
data/house_prices/: best_dbscan_model.joblib  cleaned_clustered_properties.csv  cluster_labels.csv  clustering_summary_report.txt  processed_cluster_data.csv
data/outputs/: cluster_centroids.csv  cluster_summary.csv  clustered_properties.csv  silhouette_scores.csv
data/telecommunication/: customer_details.csv  customer_subscriptions.csv
data/titanic/: competition_info.txt
data/titanic/pre_eda/: all_error_messages.txt  data_preview.txt  debug_fix_bug.txt  debug_locate_error.txt  debug_merge_code.txt  developer_first_reply.txt  developer_retry_reply.txt  json_plan.json  markdown_plan.txt  planner_history.json  pre_eda_error.txt  pre_eda_run_code.py  raw_plan_reply.txt  single_phase_code.txt  (+1 more)
data/uploads/: NSW_LGA_CODE.csv  X_test.csv  X_train.csv  X_val.csv  best_gb_model.pkl  cleaned_train.csv  cluster_characterization_summary.csv  cluster_segment_definitions.csv  customer_address.csv  customer_satisfaction.csv  customer_usage.csv  final_train_features.csv  property_clusters.csv  train_final.csv  train_processed.csv  y_test.csv  y_train.csv  y_val.csv
multi_agents/: __init__.py  business_analyst.py  business_translator.py  chat_manager.py  code_executor.py  code_summarizer.py  code_writer.py  coder.py  data_analyst.py  data_cleaner.py  data_engineer.py  data_explorer.py  data_processor.py  data_scientist.py  evaluator.py  feature_engineer.py  group_chat.py  manager.py  model_builder.py  model_consulter.py  modeler.py  modeller.py  planner.py  project_manager.py  reporter.py  summariser.py  tools.py  user.py
pages/: chatbot.py
prompts/: codeact_prompts.py  prompt.yaml
src/data_science_agents/: main.py
src/data_science_team/: main.py
tools/: __init__.py  basic_eda.py  code_execute.py  document_analyze.py  sandbox_manager.py  web_search.py
utils/: __init__.py  file_handler.py  parsers.py  sidebar.py  todo.py  utils.py
workflow/: graph.py  nodes.py  state.py
workspace/: business_issue.md  cleaned_dataset.csv  data_analysis_report.md  default_code_6429a08a-050b-4288-b4e9-4e9ee05487c1.py  requirements_6429a08a-050b-4288-b4e9-4e9ee05487c1.json  requirements_ba84ff48-6096-4672-a0ad-43203a081eb2.json  todo.md
workspace/workspace/: model_results.json
(+8 files in other folders)
