[project]
name = "data_science_team"
version = "0.1.0"
description = "data-science-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
]

[project.scripts]
kickoff = "data_science_team.main:kickoff"
run_crew = "data_science_team.main:kickoff"
plot = "data_science_team.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
