[project]
name = "data_science_agents"
version = "0.1.0"
description = "data_science_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
]

[project.scripts]
kickoff = "data_science_agents.main:kickoff"
run_crew = "data_science_agents.main:kickoff"
plot = "data_science_agents.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
